--- a/template/nginx.conf
+++ b/template/nginx.conf
@@ -14,10 +14,6 @@ events {
     worker_connections 1024;
 }
 
-upstream sample-flask-app {
-    server 127.0.0.1:5000;
-}
-
 http {
     log_format main '$remote_addr - $remote_user [$time_local] "$request" '
     '$status $body_bytes_sent "$http_referer" '
@@ -38,25 +34,7 @@ http {
     # See http://nginx.org/en/docs/ngx_core_module.html#include
     # for more information.
     include /etc/nginx/conf.d/*.conf;
-
-    server {
-        listen 80;
-        listen [::]:80;
-        server_name _;
-        root /usr/share/nginx/html;
-
-        location / {
-            proxy_pass http://sample-flask-app;
-        }
-
-        error_page 404 /404.html;
-        location = /404.html {
-        }
-
-        error_page 500 502 503 504 /50x.html;
-        location = /50x.html {
-        }
-    }
+    include /etc/nginx/sites-enabled/*;
 
     # Settings for a TLS enabled server.
     #
