--- a/playbook.yaml
+++ b/playbook.yaml
@@ -36,6 +36,12 @@
         group: nginx
         mode: '0644'
 
+    - name: Create a directory if it does not exist
+      ansible.builtin.file:
+        path: /etc/nginx/sites-enabled
+        state: directory
+        mode: '0755'
+
     - name: Configure nginx sites-enabled
       ansible.builtin.template:
         src: template/default
